update readme and links

--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
   <body>
     <div class="app">
       <header>
-        <h1>
-          <i class="icon ph ph-cube"></i>
-          Desafios concluídos do #boracodar
-        </h1>
+        <h1>Desafios concluídos do #boracodar</h1>
 
         <div class="banner">
           <img
-            src=".github/bora-codar.PNG"
+            src="./assets/bora-codar.PNG"
             style="border-radius: 5px"
-            alt="Website"
+            alt="Logo do evento bora codar"
             height="80px"
           />
         </div>
@@ -38,13 +35,13 @@
           de #boracodar da Rocketseat
         </p>
 
-        <h2>💻 Projetos</h2>
+        <h2>Projetos</h2>
         <h3>Lista dos desafios concluídos</h3>
 
         <ul class="list">
           <li>
             <a href="./12-kanban/src/index.html">
-              <i class="icon ph ph-push-pin"></i>
+              <i class="icon ph ph-kanban"></i>
               Kanban Twelve - #boracodar 12
             </a>
           </li>
