:bug: image not found

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <div class="banner">
           <img
-            src="./assets/bora-codar.PNG"
+            src="./assets/bora-codar-banner.png"
             style="border-radius: 5px"
             alt="Logo do evento bora codar"
             height="80px"
