update readme and index

--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
 
       <main>
         <p>
-          Esse repositório é sobre os desafios que desenvolvi durante os eventos
-          de #boracodar da Rocketseat
+          Cada projeto ou componente do projeto foi desenvolvido para testar e
+          aperfeiçoar meus conhecimentos de HTML, CSS e Javascript, sempre em
+          buscar de me aprender novas formas de criar e resolver desafios do
+          dia-a-dia de front-end.
         </p>
 
-        <h2>Projetos</h2>
-        <h3>Lista dos desafios concluídos</h3>
+        <h2>Lista dos desafios concluídos</h2>
 
         <ul class="list">
           <li>
