multi-step-form input phone update

--- a/23-multi-step-form/index.html
+++ b/23-multi-step-form/index.html
@@ -47,7 +47,7 @@
                 name="phone"
                 type="tel"
                 placeholder="Digite seu número de WhatsApp"
-                onkeypress="return /\d|[+]|[(]|[)]/.test(event.key)"
+                onkeypress="return /\d|[+]|[(]|[)]|[ ]|[-]/.test(event.key)"
               />
             </div>
 
