:palette: add challenge 24 - light adjustment

--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
               Multi-step Form - #boracodar23</a
             >
           </li>
+          <li>
+            <a href="./24-light-adjustment/index.html">
+              <i class="icon ph ph-palette"></i>
+              Light Adjustment - #boracodar24</a
+            >
+          </li>
         </ul>
       </main>
 
