--- a/index.html
+++ b/index.html
@@ -1,85 +1,83 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-    <title>Projetos concluídos - Brendon Gomes</title>
-  </head>
-  <body>
-    <div class="app">
-      <header>
-        <h1>Desafios concluídos do #boracodar</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet" />
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-        <div class="banner">
-          <img
-            src="./assets/bora-codar-banner.png"
-            style="border-radius: 5px"
-            alt="Logo do evento bora codar"
-            height="80px"
-          />
-        </div>
-      </header>
+  <title>Projetos concluídos - Brendon Gomes</title>
+</head>
 
-      <main>
-        <p>
-          Cada projeto ou componente do projeto foi desenvolvido para testar e
-          aperfeiçoar meus conhecimentos de HTML, CSS e Javascript, sempre em
-          buscar de me aprender novas formas de criar e resolver desafios do
-          dia-a-dia de front-end.
-        </p>
+<body>
+  <div class="app">
+    <header>
+      <h1>Desafios concluídos do #boracodar</h1>
 
-        <h2>Lista dos desafios concluídos</h2>
+      <div class="banner">
+        <img src="./assets/bora-codar-banner.png" style="border-radius: 5px" alt="Logo do evento bora codar"
+          height="80px" />
+      </div>
+    </header>
 
-        <ul class="list">
-          <li>
-            <a href="./12-kanban/src/index.html">
-              <i class="icon ph ph-kanban"></i>
-              Kanban Twelve - #boracodar 12
-            </a>
-          </li>
-          <li>
-            <a href="./21-shopping-cart/index.html">
-              <i class="icon ph ph-shopping-cart"></i>
+    <main>
+      <p>
+        Cada projeto ou componente do projeto foi desenvolvido para testar e
+        aperfeiçoar meus conhecimentos de HTML, CSS e Javascript, sempre em
+        buscar de me aprender novas formas de criar e resolver desafios do
+        dia-a-dia de front-end.
+      </p>
 
-              Carrinho de Compras - #boracodar21</a
-            >
-          </li>
-          <li>
-            <a href="./22-profile-settings/index.html">
-              <i class="icon ph ph-gear"></i>
-              Profile Settings - #boracodar22</a
-            >
-          </li>
-          <li>
-            <a href="./23-multi-step-form/index.html">
-              <i class="icon ph ph-scroll"></i>
-              Multi-step Form - #boracodar23</a
-            >
-          </li>
-          <li>
-            <a href="./24-light-adjustment/index.html">
-              <i class="icon ph ph-palette"></i>
-              Light Adjustment - #boracodar24</a
-            >
-          </li>
-        </ul>
-      </main>
+      <h2>Lista dos desafios concluídos</h2>
 
-      <footer>
-        <p>
-          Feito por <a href="https://github.com/Brendon3578"> Brendon Gomes</a>
-        </p>
-        <p>Continue sempre avançando ☕</p>
-      </footer>
-    </div>
-  </body>
+      <ul class="list">
+        <li>
+          <a href="./05-calculator/index.html">
+            <i class="icon ph ph-calculator"></i>
+            Calculator com RPN - #boracodar 5
+          </a>
+        </li>
+        <li>
+          <a href="./12-kanban/src/index.html">
+            <i class="icon ph ph-kanban"></i>
+            Kanban Twelve - #boracodar 12
+          </a>
+        </li>
+        <li>
+          <a href="./21-shopping-cart/index.html">
+            <i class="icon ph ph-shopping-cart"></i>
+
+            Carrinho de Compras - #boracodar21</a>
+        </li>
+        <li>
+          <a href="./22-profile-settings/index.html">
+            <i class="icon ph ph-gear"></i>
+            Profile Settings - #boracodar22</a>
+        </li>
+        <li>
+          <a href="./23-multi-step-form/index.html">
+            <i class="icon ph ph-scroll"></i>
+            Multi-step Form - #boracodar23</a>
+        </li>
+        <li>
+          <a href="./24-light-adjustment/index.html">
+            <i class="icon ph ph-palette"></i>
+            Light Adjustment - #boracodar24</a>
+        </li>
+      </ul>
+    </main>
+
+    <footer>
+      <p>
+        Feito por <a href="https://github.com/Brendon3578"> Brendon Gomes</a>
+      </p>
+      <p>Continue sempre avançando ☕</p>
+    </footer>
+  </div>
+</body>
+
 </html>
