calculadora quase pronta

--- a/05-calculator/index.html
+++ b/05-calculator/index.html
@@ -91,7 +91,7 @@
                   <div class="number-output" id="shunting-output">
                   </div>
                   <div class="direction" id="direction-arrow">
-                    ⬇
+                    <i class="ph-fill ph-hourglass-high"></i>
                   </div>
                   <span class="label input">Input</span>
                   <div class="number-input" id="shunting-input">
