need to fix unary bug in calculator yet

--- a/05-calculator/index.html
+++ b/05-calculator/index.html
@@ -80,6 +80,13 @@
       <div class="second-calculator" id="configurations">
         <div class="container">
           <h2>Passo-a-passo do cálculo feito</h2>
+          <p>O Resultado deveria ser: <span id="accurate-result"></span></p>
+          <p>Se o resultado não é igual ao resultado que apareceu na calculadora, <a
+              href="https://github.com/Brendon3578/boracodar-challenges/issues/new" target="_blank">
+
+              reporte aqui
+            </a>, com o cálculo feito e a resposta que foi exibida
+          </p>
           <p>
           </p>
           <section>
