--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li>
           <a href="./05-calculator/index.html">
             <i class="icon ph ph-calculator"></i>
-            Calculator com RPN - #boracodar 5
+            Calculadora com RPN e Algoritmo Shunting Yard - #boracodar 5
           </a>
         </li>
         <li>
